# PandoraLauncher

./: Cargo.toml
crates/backend/: Cargo.toml
crates/backend/src/: backend.rs  backend_handler.rs  install_content.rs  instance.rs  lib.rs  update.rs
crates/backend/src/launch/: mod.rs
crates/backend/src/launcher_import/: multimc.rs
crates/bridge/src/: instance.rs  message.rs
crates/command/: Cargo.toml
crates/command/src/: command.rs  lib.rs  process.rs
crates/command/src/unix/: mod.rs  unix_helpers.rs  unix_spawn.rs
crates/command/src/unix/linux/: bwrap.rs  pkexec.rs
crates/command/src/unix/macos/: elevated.rs  sandbox.rs
crates/frontend/: Cargo.toml
crates/frontend/locales/: locales.yml
crates/frontend/src/: interface_config.rs  processor.rs  ui.rs
crates/frontend/src/entity/: instance.rs
crates/frontend/src/modals/: settings.rs
crates/frontend/src/pages/: skins_page.rs
crates/frontend/src/pages/instance/: quickplay_subpage.rs  settings_subpage.rs
crates/pandora_launcher/: Cargo.toml
crates/pandora_launcher/src/: main.rs
crates/t/: locales.toml
crates/t/src/: lib.rs
